--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.0.2",
     "@libsql/client": "^0.9.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "drizzle-orm": "^0.33.0",
